# advent-of-code-2021

./: Cargo.toml  README.md
benches/: day6_lanternfish.rs
rust/: Cargo.toml
src/: day6.rs
