[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Kevin Bader <kevinbader@users.noreply.github.com>"]

[[bench]]
name = "day6_lanternfish"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "~1.0.51"
criterion = "~0.3.5"
